--- a/HappyBrides/App/Portal/Login.cshtml
+++ b/HappyBrides/App/Portal/Login.cshtml
@@ -94,6 +94,15 @@
     }
 }
 
+@if (!Validation.IsValid())
+{
+    <div class="text-center">
+	<div class="d-inline-block alert alert-danger" role="alert">
+	    @Html.ValidationSummary()
+	</div>
+    </div>
+}
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-4 col-6 offset-lg-2 px-4 py-4 bg-white border rounded-left">
