--- a/HappyBrides/App/Portal/Register.cshtml
+++ b/HappyBrides/App/Portal/Register.cshtml
@@ -51,6 +51,15 @@
     }
 }
 
+@if (!Validation.IsValid())
+{
+    <div class="text-center">
+	<div class="d-inline-block alert alert-danger" role="alert">
+	    @Html.ValidationSummary()
+	</div>
+    </div>
+}
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-4 col-12 offset-lg-4 px-4 py-4 bg-white border rounded">
